--- a/nemotron-agent-demo/docker-compose.yml
+++ b/nemotron-agent-demo/docker-compose.yml
@@ -28,20 +28,22 @@ services:
 
   nemotron-ui:
     build:
-      context: .
-      dockerfile: Dockerfile.ui
+      context: ..
+      dockerfile: nemotron-agent-demo/Dockerfile.ui
     container_name: nemotron-ui
     restart: unless-stopped
     environment:
       OPENAI_BASE_URL: http://nemotron-trtllm:8000/v1
       GRADIO_SERVER_NAME: 0.0.0.0
       GRADIO_SERVER_PORT: 7860
+      PYTHONPATH: /app:/app/nemostation/vendors/daystrom_memory_lattice_alpha1
     ports:
       - "7860:7860"
     volumes:
       - ./prompt_library:/app/prompt_library
       - ./context:/app/context:ro
       - ./prompts:/app/prompts:ro
+      - ../vendors:/app/nemostation/vendors:ro
     depends_on:
       nemotron-trtllm:
         condition: service_healthy
