Add long-run playground demo mode

--- a/nemotron-agent-demo/docker-compose.yml
+++ b/nemotron-agent-demo/docker-compose.yml
@@ -79,3 +79,11 @@ services:
       timeout: 5s
       retries: 30
       start_period: 20s
+
+  playground:
+    build:
+      context: ..
+      dockerfile: nemotron-agent-demo/playground/Dockerfile
+    image: nemotron-playground:latest
+    profiles:
+      - playground
