--- a/nemotron-agent-demo/docker-compose.yml
+++ b/nemotron-agent-demo/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - ./context:/app/context:ro
       - ./prompts:/app/prompts:ro
       - ../vendors:/app/nemostation/vendors:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       nemotron-trtllm:
         condition: service_healthy
