--- a/nemotron-agent-demo/docker-compose.yml
+++ b/nemotron-agent-demo/docker-compose.yml
@@ -37,7 +37,10 @@ services:
       GRADIO_SERVER_NAME: 0.0.0.0
       GRADIO_SERVER_PORT: 7860
       DML_BASE_URL: http://dml-service:9001
+      DOCKER_HOST: unix:///var/run/docker.sock
       PYTHONPATH: /app:/app/nemostation/vendors/daystrom_memory_lattice_alpha1
+    group_add:
+      - "987"
     ports:
       - "7860:7860"
     volumes:
