Add local playground image build and fallback

--- a/nemotron-agent-demo/docker-compose.yml
+++ b/nemotron-agent-demo/docker-compose.yml
@@ -84,7 +84,7 @@ services:
       retries: 30
       start_period: 20s
 
-  playground:
+  nemotron-playground-image:
     build:
       context: ..
       dockerfile: nemotron-agent-demo/playground/Dockerfile
