Add cluster fix loop and playground deps

--- a/nemotron-agent-demo/playground/Dockerfile
+++ b/nemotron-agent-demo/playground/Dockerfile
@@ -14,9 +14,12 @@ RUN pip install --no-cache-dir \
         fastapi \
         gradio \
         pydantic \
+        pytest \
         redis \
         requests \
         uvicorn
+
+RUN python -c "import requests, redis; print('deps ok')"
 
 RUN useradd -ms /bin/bash playground
 
