Fix vllm wheel download path

--- a/nemotron-agent-demo/server/kimi_vllm/Dockerfile
+++ b/nemotron-agent-demo/server/kimi_vllm/Dockerfile
@@ -6,11 +6,12 @@ RUN apt-get update \
 
 RUN python -m pip install --no-cache-dir --upgrade pip
 
-RUN curl -fL https://github.com/vllm-project/vllm/releases/download/v0.13.0/vllm-0.13.0+cu130-cp38-abi3-manylinux_2_35_aarch64.whl \
-      -o /tmp/vllm.whl
-RUN python -m pip uninstall -y vllm || true
-RUN python -m pip install --no-cache-dir /tmp/vllm.whl
-RUN python -c "import vllm; print('vLLM version:', vllm.__version__)"
+RUN WHEEL=/tmp/vllm-0.13.0+cu130-cp38-abi3-manylinux_2_35_aarch64.whl \
+    && curl -fL https://github.com/vllm-project/vllm/releases/download/v0.13.0/vllm-0.13.0+cu130-cp38-abi3-manylinux_2_35_aarch64.whl -o "$WHEEL" \
+    && python -m pip uninstall -y vllm || true
+RUN WHEEL=/tmp/vllm-0.13.0+cu130-cp38-abi3-manylinux_2_35_aarch64.whl \
+    && python -m pip install --no-cache-dir "$WHEEL" \
+    && python -c "import vllm; print('vLLM version:', vllm.__version__)"
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
