Update kimi-vllm install and entrypoint

--- a/nemotron-agent-demo/server/kimi_vllm/Dockerfile
+++ b/nemotron-agent-demo/server/kimi_vllm/Dockerfile
@@ -10,21 +10,19 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 
 ENV PATH="/root/.local/bin:${PATH}"
 
-RUN uv pip install vllm --pre \
+RUN uv pip install --system vllm --pre \
     --extra-index-url https://wheels.vllm.ai/1d495c2f92c7e75f580c2f4b465823f2fb688abe/cu130 \
     --extra-index-url https://download.pytorch.org/whl/cu130 \
     --index-strategy unsafe-best-match
 
-RUN python -m pip install --no-cache-dir model-hosting-container-standards
-
-RUN python -c "import model_hosting_container_standards.sagemaker; print('mhcs ok')"
+RUN uv pip install --system model-hosting-container-standards
 
 RUN python - <<'PY'
-import vllm
-import torch
-
+import vllm, torch
 print("vLLM", vllm.__version__)
 print("torch", torch.__version__, "cuda", torch.version.cuda)
+import vllm._C
+print("vllm._C OK")
 PY
 
 COPY entrypoint.sh /entrypoint.sh
