--- a/nemotron-agent-demo/docker-compose.yml
+++ b/nemotron-agent-demo/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - ./prompt_library:/app/prompt_library
       - ./context:/app/context:ro
       - ./prompts:/app/prompts:ro
+      - ./agent_projects:/app/agent_projects
+      - ./playground_workspace:/app/playground_workspace
       - ../vendors:/app/nemostation/vendors:ro
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
